--- a/node/event.html
+++ b/node/event.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
   RED.nodes.registerType('event in',{
     category: 'input',
-    color:"rgb(231, 231, 174)",
+    color:"rgb(153, 204, 255)",
     defaults: {
       name: {value:""},
       app: {value:"system"},
@@ -11,7 +11,7 @@
     },
     inputs:0,
     outputs:1,
-    icon: "white-globe.png",
+    icon: "bridge.png",
     label: function() {
       return this.name||"event";
     }
@@ -24,15 +24,15 @@
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
     <div class="form-row">
-        <label for="node-input-event"><i class="icon-tag"></i> Event</label>
+        <label for="node-input-event"><i class="fa fa-tasks"></i> Event</label>
         <input type="text" id="node-input-event_name" placeholder="">
     </div>
     <div class="form-row">
-        <label for="node-input-type"><i class="icon-tag"></i> Type</label>
+        <label for="node-input-type"><i class="fa fa-dot-circle-o"></i> Type</label>
         <input type="text" id="node-input-event_type" placeholder="">
     </div>
     <div class="form-row">
-        <label for="node-input-app"><i class="icon-tag"></i> App</label>
+        <label for="node-input-app"><i class="fa fa-bookmark"></i> App</label>
         <input type="text" id="node-input-app" placeholder="">
     </div>
      <div class="form-row">
