Added graphQL node

--- a/node/event.html
+++ b/node/event.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
   RED.nodes.registerType('event in',{
     category: 'input',
-    color:"rgb(153, 204, 255)",
+    color:"rgb(255, 255, 255)",
     defaults: {
       name: {value:""},
       app: {value:"system"},
@@ -11,7 +11,7 @@
     },
     inputs:0,
     outputs:1,
-    icon: "bridge.png",
+    icon: "veritone-logo.png",
     label: function() {
       return this.name||"event";
     }
