--- a/node/graphql.html
+++ b/node/graphql.html
@@ -9,13 +9,13 @@
     </div>
 </script>
 
-<script type="text/x-red" data-template-name="graphql">
+<script type="text/x-red" data-template-name="aiware">
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> <span data-i18n="node-red:common.label.name"></span></label>
         <input type="text" id="node-input-name" data-i18n="[placeholder]node-red:common.label.name">
     </div>
     <div class="form-row" style="position: relative; margin-bottom: 0px;">
-        <label for="node-input-template"><i class="fa fa-file-code-o"></i> <span data-i18n="graphql.label.query"></span></label>
+        <label for="node-input-template"><i class="fa fa-file-code-o"></i> <span data-i18n="aiware.label.query"></span></label>
         <input type="hidden" id="node-input-template" autofocus="autofocus">
         <div style="position: absolute; right:0;display:inline-block; text-align: right; font-size: 0.8em;">
             <span data-i18n="template.label.format"></span>:
@@ -32,10 +32,10 @@
         <div style="height: 250px;" class="node-text-editor" id="node-input-template-editor" ></div>
     </div>
     <div class="form-row">
-        <label for="node-input-syntax"><i class="fa fa-code"></i> <span data-i18n="graphql.label.syntax"></span></label>
+        <label for="node-input-syntax"><i class="fa fa-code"></i> <span data-i18n="aiware.label.syntax"></span></label>
         <select id="node-input-syntax" style="width:180px;">
-            <option value="mustache" data-i18n="graphql.label.mustache"><span data-i18n="template.label.mustache"></span></option>
-            <option value="plain" data-i18n="graphql.label.plain"><span data-i18n="template.label.plain"></span></option>
+            <option value="mustache" data-i18n="aiware.label.mustache"><span data-i18n="template.label.mustache"></span></option>
+            <option value="plain" data-i18n="aiware.label.plain"><span data-i18n="template.label.plain"></span></option>
         </select>
     </div>
 </script>
@@ -50,8 +50,8 @@
    }
   });
  }
- RED.nodes.registerType('veritoneApi', {
-  category: 'veritone',
+ RED.nodes.registerType('aiware', {
+  category: 'aiware',
   color: '#2196f3',
   defaults: {
    name: {value: "", required: true },
@@ -64,7 +64,7 @@
   icon: "veritone-logo.png",
   align: "right",
   label: function() {
-   return this.name || "GraphQL";
+   return this.name || "aiWare";
   },
   labelStyle: function() {
    return this.name ? "node_label_italic" : "";
@@ -121,6 +121,6 @@
  });
 </script>
 
-<script type="text/x-red" data-help-name="graphql">
-    <p>This node executes a Veritone API GraphQL Query or Mutation</p>
+<script type="text/x-red" data-help-name="aiware">
+    <p>This node executes a aiWare API GraphQL Query or Mutation</p>
 </script>
