use the correct node context

--- a/node/graphql.html
+++ b/node/graphql.html
@@ -52,7 +52,7 @@
  }
  RED.nodes.registerType('aiware', {
   category: 'aiware',
-  color: '#2196f3',
+  color: '#6ec6ff',
   defaults: {
    name: {value: "", required: true },
    format: {value:"handlebars", required: false },
@@ -61,7 +61,7 @@
   },
   inputs: 1,
   outputs: 2,
-  icon: "veritone-logo.png",
+  icon: "veritone-logo-transparent.png",
   align: "right",
   label: function() {
    return this.name || "aiWare";
