use the api token from env

--- a/node/event.html
+++ b/node/event.html
@@ -6,8 +6,7 @@
       name: {value:""},
       app: {value:"system"},
       event_type: {value:""},
-      event_name: {value:""},
-      token: {value:""}
+      event_name: {value:""}
     },
     inputs:0,
     outputs:1,
@@ -35,10 +34,6 @@
     <div class="form-row">
         <label for="node-input-app"><i class="fa fa-bookmark"></i> App</label>
         <input type="text" id="node-input-app" placeholder="">
-    </div>
-     <div class="form-row">
-        <label for="node-input-token"><i class="icon-tag"></i> Token</label>
-        <input type="text" id="node-input-token" placeholder="">
     </div>
 </script>
 
