--- a/node/kafka.html
+++ b/node/kafka.html
@@ -3,7 +3,7 @@
     category: 'aiWARE',
     color:"#b3e5fc",
     defaults: {
-      name: {value:""},
+      name: {value:""}
     },
     inputs:0,
     outputs:1,
