--- a/node/structured-data.html
+++ b/node/structured-data.html
@@ -1,9 +1,10 @@
 <script type="text/javascript">
-    RED.nodes.registerType('create-structure-data', {
+    RED.nodes.registerType('structured-data', {
         category: 'aiWARE',
         color: '#b3e5fc',
         defaults: {
             name: { value: "" },
+            action: { value: "create" },
             schemaId: { value: "", required: true },
             dataTemplate: { value: "", required: true }
         },
@@ -11,10 +12,10 @@
         outputs: 2,
         outputLabels: ["result", "error"],
         icon: "veritone-logo-transparent.png",
-        paletteLabel: "create-structure-data",
+        paletteLabel: "structured-data",
         align: "right",
         label: function () {
-            return this.name || "create-structure-data";
+            return this.name || "structured-data";
         },
         oneditprepare: function () {
             var schemaId = this.schemaId;
@@ -35,6 +36,8 @@
                             .attr("selected", schema.id === schemaId ? "selected" : null)
                     );
                 });
+            }, function (error) {
+                console.log(error);
             });
             this.dataTemplateEditor = dataTemplateEditor;
             RED.library.create({
@@ -52,10 +55,17 @@
     });
 </script>
 
-<script type="text/x-red" data-template-name="create-structure-data">
+<script type="text/x-red" data-template-name="structured-data">
     <div class="form-row">
         <label for="node-input-name"><i class="icon-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
+    </div>
+    <div class="form-row">
+        <label for="node-input-action"> Action</label>
+        <select id="node-input-action" style="width:66%">
+            <option value="query">Query</option>
+            <option value="create">Create</option>
+        </select>
     </div>
     <div class="form-row">
         <label for="node-input-schemaId"><i class="fa fa-random"></i> Schema</label>
@@ -71,6 +81,6 @@
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="create-structure-data">
-    <p>Create structure data</p>
+<script type="text/x-red" data-help-name="structured-data">
+    <p>Structured data</p>
 </script>
