form label with icon

--- a/node/create-tdo.html
+++ b/node/create-tdo.html
@@ -5,11 +5,11 @@
         <input type="hidden" id="node-input-uriType">
     </div>
     <div class="form-row">
-        <label for="node-input-startDateTime"><i class="fa fa-date"></i> Start Time</label>
+        <label for="node-input-startDateTime"><i class="fa fa-calendar"></i> Start Time</label>
         <input type="string" id="node-input-startDateTime">
     </div>
     <div class="form-row">
-        <label for="node-input-stopDateTime"><i class="fa fa-date"></i> Stop Time</label>
+        <label for="node-input-stopDateTime"><i class="fa fa-calendar"></i> Stop Time</label>
         <input type="string" id="node-input-stopDateTime">
     </div>
     <div class="form-row">
