--- a/node/create-tdo.html
+++ b/node/create-tdo.html
@@ -86,5 +86,15 @@
 </script>
 
 <script type="text/x-red" data-help-name="create-tdo">
-    <p>Create a TDO</p>
+    <p>
+        The create-tdo node creates a TemporalDataObject container object 
+        in aiWARE and a child Asset records that stores the original media file.
+        <br>
+        The node is usually used with the processing node for first 
+        creating Files in aiWARE's data model, and then running cognitive on those Files.
+        <br>
+        <br>
+        Each TemporalDataObject expects a start time. If left blank, the Start Time will be populated 
+        with the dateTime value the TDO was created in aiWARE.
+    </p>
 </script>
